# cws-map

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build-debug  Dockerfile.debug  Dockerfile.runner-mini-debug  Makefile  README.md  conanfile.py  conanfile.txt  docker-compose.yml  noted.md
app/: CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
cws-map/: CMakeLists.txt  conanfile.py
cws-map/include/cws/: common.hpp  concurrent_map.hpp  general.hpp  map.hpp  map_layer.hpp  physical.hpp  simulation.hpp  util.hpp
cws-map/include/cws/air/: container.hpp  plain.hpp  type.hpp
cws-map/include/cws/layer/: air.hpp  base.hpp  illumination.hpp  network.hpp  obstruction.hpp  subject.hpp  temperature.hpp
cws-map/include/cws/layer_logic/: subject.hpp  temperature.hpp
cws-map/include/cws/layer_state/: base.hpp  temperature.hpp
cws-map/include/cws/layer_structure/: subject.hpp
cws-map/include/cws/layers/: base.hpp  subjects.hpp  temperature.hpp
cws-map/include/cws/map_layer/: air.hpp  base.hpp  illumination.hpp  network.hpp  obstruction.hpp  subject.hpp  temperature.hpp
cws-map/include/cws/network/: container.hpp  packet.hpp  type.hpp
cws-map/include/cws/simulation/: general.hpp  interface.hpp  map_query.hpp  simulation.hpp  simulation_map.hpp  state.hpp
cws-map/include/cws/subject/: base.hpp  camera.hpp  interactive.hpp  light_emitter.hpp  network.hpp  plain.hpp  sensor.hpp  temp_emitter.hpp  turnable.hpp  type.hpp
cws-map/include/cws/subject/extension/: base.hpp  camera.hpp  light_source.hpp  network.hpp  temp_source.hpp  turnable.hpp
cws-map/src/: CMakeLists.txt  common.cpp  general.cpp  main.cpp  map.cpp  physical.cpp  simulation.cpp
cws-map/src/air/: container.cpp  plain.cpp
cws-map/src/layer/: subject.cpp
cws-map/src/layer_logic/: simulation.cpp  subject.cpp  temperature.cpp
cws-map/src/layer_state/: temperature.cpp
cws-map/src/map_layer/: absorption.cpp  air.cpp  illumination.cpp  network.cpp  obstruction.cpp  subject.cpp  temperature.cpp
cws-map/src/network/: container.cpp
cws-map/src/simulation/: interface.cpp  master.cpp  simulation_map.cpp  slave.cpp  state.cpp
cws-map/src/subject/: base.cpp  camera.cpp  interactive.cpp  light_emitter.cpp  network.cpp  plain.cpp  sensor.cpp  temp_emitter.cpp  turnable.cpp
cws-map/test/: CMakeLists.txt  air.cpp  illumination.cpp  interface.cpp  main.cpp  map.cpp  network.cpp  obstruction.cpp  simulation.cpp  subject.cpp
cws-map/test/algo/: illumination.cmake  illumination.cpp
grpc-server/: CMakeLists.txt  conanfile.py
grpc-server/cmake/: custom-protobuf-generate.cmake  proto.cmake
grpc-server/src/: CMakeLists.txt  converters.cpp  converters.hpp  main.cpp  map.hpp  map_sensor.cpp  map_sensor.hpp  simulation.hpp
grpc-server/src/service/: map.hpp  map_service.hpp  simulation_service.hpp  subject_hub_service.hpp  sv_device.hpp  sv_device_cb.cpp  sv_device_cb.hpp  sv_map.hpp  sv_simulation.hpp  verify.cpp  verify.hpp
grpc-server/test/: CMakeLists.txt  server.cpp
proto/: CMakeLists.txt  conanfile.py
proto/cmake/: custom-protobuf-generate.cmake
test/: CMakeLists.txt  server.cpp
test/algorithm/: CMakeLists.txt  illumination.cpp
test/algorithm/cmake/: illumination.cmake
